<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Parse.com Login Tutorial</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="Park">Proceed To Park</string>
    <string name="IntroApp">myIntro</string>
    <string name="ChoiceText1">Select Parking Ticket</string>
    <string name="Day">Day</string>
    <string name="Week">Week (10% off)</string>
    <string name="Monthly">Monthly (20% off)</string>
    <string name="Choose">Choose</string>
    <string name="cbd">CBD</string>
    <string name="westlands">westlands</string>
    <string name="ngongroad">ngongroad</string>
    <string name="area">Select Your closest area</string>
    <string name="centralbusiness">CBD</string>
    <string name="vehiclecategory">select your vehicle category</string>
    <string name="saloon">saloon</string>
    <string name="lorry">Lorry</string>
    <string name="canter">canter</string>
    <string name="accountnum">Account Number</string>
    <string name="pay">Pay</string>
    <string name="paypal">Paypal</string>
    <string name="mpesa">Mpesa</string>
    <string name="equitel">Equitel</string>
    <string name="payment">Please choose Your Payment Mode</string>
    <string name="title_activity_timer">Timer</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="phonenum">phonenumber</string>
    <string name="idnum">ID number</string>
    <string name="emailadd">Email Address</string>
    <string name="pin">Enter pin</string>
    <string name="signup">Sign Up</string>
    <string name="username">user name</string>
</resources>
