<?xml version="1.0" encoding="utf-8"?>
<!-- Parent linear layout with vertical orientation -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payment"
        android:textSize="20sp"
        android:text="@string/payment"/>
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:checkedButton="@+id/mpesa"
    android:id="@+id/paymentbuttons"
    >
    <RadioButton
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:text="@string/mpesa"
        android:layout_marginTop="15dp"
        android:id="@+id/mpesa"
       />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/equitel"
        android:id="@+id/equitel"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/paypal"
        android:id="@+id/paypal"
        />
</RadioGroup>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/account"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp"
        android:hint="@string/accountnum"
        android:clickable="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/paybutton"
        android:text="@string/pay"/>

</LinearLayout>