<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome"
        android:paddingTop="50dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/LogoutBtn" />
    <Button
        android:id="@+id/Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Park"
        android:layout_below="@+id/logout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"/>


    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_fab_label="Menu label">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                fab:fab_size="mini"
                fab:fab_label="Home" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                fab:fab_size="mini"
                fab:fab_label="Menu item 1" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                fab:fab_size="mini"
                fab:fab_label="Menu item 2" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                fab:fab_size="mini"
                fab:fab_label="hi" />

        </com.github.clans.fab.FloatingActionMenu>
    </FrameLayout>

</RelativeLayout>

